objects/ASI_CRM_Trade_A_P_Plan__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Balance_Amount__c</fullName>
        <formula>ASI_CRM_Sum_Plan_Amount__c - ASI_CRM_Committed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Budget_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.CompanyName</field>
                <operation>equals</operation>
                <value>Pernod Ricard China</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>CN Trade A&amp;P Plan</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Trade_A_P_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_PP_Name__c</fullName>
        <label>PP Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Budget</fullName>
                    <default>true</default>
                    <label>Budget</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Cal_Fiscal_Year__c</fullName>
        <formula>IF(MONTH(ASI_CRM_Start_Date__c) &gt; 6, 
&apos;FY&apos; &amp; TEXT(MOD(YEAR(ASI_CRM_Start_Date__c), 1000)) &amp; &apos;/&apos; &amp; TEXT(MOD(YEAR(ASI_CRM_Start_Date__c), 1000) + 1), 
&apos;FY&apos; &amp; TEXT(MOD(YEAR(ASI_CRM_Start_Date__c), 1000) - 1) &amp; &apos;/&apos; &amp; TEXT(MOD(YEAR(ASI_CRM_Start_Date__c), 1000)))</formula>
        <label>Fiscal Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Amount__c</fullName>
        <label>Committed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Committed_Outlet__c</fullName>
        <label>Committed Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Communication_Supporting__c</fullName>
        <label>Communication Supporting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tentcard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Division__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>ASI_CRM_Division__c</referenceTo>
        <relationshipLabel>Trade A&amp;P Plan</relationshipLabel>
        <relationshipName>ASI_CRM_Trade_A_P_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FY13/14</fullName>
                </value>
                <value>
                    <fullName>FY14/15</fullName>
                </value>
                <value>
                    <fullName>FY15/16</fullName>
                </value>
                <value>
                    <fullName>FY16/17</fullName>
                </value>
                <value>
                    <fullName>FY17/18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Balance_Sum__c</fullName>
        <description>Sum of all items&apos; balance.</description>
        <label>Item Balance Sum</label>
        <summarizedField>ASI_CRM_Trade_A_P_Plan_Item__c.ASI_CRM_Balance_Quantity__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Trade_A_P_Plan_Item__c.ASI_CRM_Trade_A_P_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Count__c</fullName>
        <description>Number of items.</description>
        <label>Item Count</label>
        <summaryForeignKey>ASI_CRM_Trade_A_P_Plan_Item__c.ASI_CRM_Trade_A_P_Plan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Balance__c</fullName>
        <formula>ASI_CRM_Total_Outlet__c - ASI_CRM_Committed_Outlet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outlet Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet_Sub_Type__c</fullName>
        <label>Outlet Sub-Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional Lounge</fullName>
                </value>
                <value>
                    <fullName>Hotel Lounge</fullName>
                </value>
                <value>
                    <fullName>International Western Bar</fullName>
                </value>
                <value>
                    <fullName>Family KTV</fullName>
                </value>
                <value>
                    <fullName>Live Band</fullName>
                </value>
                <value>
                    <fullName>DJ Café</fullName>
                </value>
                <value>
                    <fullName>Beer Bar</fullName>
                </value>
                <value>
                    <fullName>Traditional Bar</fullName>
                </value>
                <value>
                    <fullName>Modern Bar</fullName>
                </value>
                <value>
                    <fullName>Traditional Dance Club</fullName>
                </value>
                <value>
                    <fullName>Local Restaurant W/ VIP Rooms</fullName>
                </value>
                <value>
                    <fullName>Local Restaurant W/O VIP Rooms</fullName>
                </value>
                <value>
                    <fullName>Asian Restaurant</fullName>
                </value>
                <value>
                    <fullName>Western Restaurant</fullName>
                </value>
                <value>
                    <fullName>Casual Dining</fullName>
                </value>
                <value>
                    <fullName>International KTV</fullName>
                </value>
                <value>
                    <fullName>Local KTV</fullName>
                </value>
                <value>
                    <fullName>Japanese KTV</fullName>
                </value>
                <value>
                    <fullName>Korean KTV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_PROS_Image__c</fullName>
        <label>PROS Image</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Iconic</fullName>
                </value>
                <value>
                    <fullName>Leading</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Mainstream</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Plan_Amount__c</fullName>
        <label>Plan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sum_Plan_Amount__c</fullName>
        <label>Plan Amount</label>
        <summarizedField>ASI_CRM_Trade_A_P_Plan_Item__c.ASI_CRM_Total_Amount__c</summarizedField>
        <summaryForeignKey>ASI_CRM_Trade_A_P_Plan_Item__c.ASI_CRM_Trade_A_P_Plan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Sys_Pending_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys Pending Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trade_A_P_Plan1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trade_A_P_Plan2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_System_Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trade_A_P_Plan3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Outlet__c</fullName>
        <label>Total Outlet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trade A&amp;P Plan</label>
    <listViews>
        <fullName>ASI_CRM_CN_All_Trade_A_P_Plan</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_PP_Name__c</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_CN_Budget_Owner__c</columns>
        <columns>ASI_CRM_Plan_Amount__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_CN_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Trade_A_P_Plan__c.ASI_CRM_CN_Trade_A_P_Plan</value>
        </filters>
        <label>All Trade A&amp;P Plan</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_CN_Trade_A_P_Plan</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_CN_PP_Name__c</columns>
        <columns>ASI_CRM_Division__c</columns>
        <columns>ASI_CRM_CN_Budget_Owner__c</columns>
        <columns>ASI_CRM_Plan_Amount__c</columns>
        <columns>ASI_CRM_Fiscal_Year__c</columns>
        <columns>ASI_CRM_CN_Version__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Trade_A_P_Plan__c.ASI_CRM_CN_Trade_A_P_Plan</value>
        </filters>
        <label>My Trade A&amp;P Plan</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_VN_All_Promotion_Plan</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Status__c</columns>
        <columns>ASI_CRM_Start_Date__c</columns>
        <columns>ASI_CRM_End_Date__c</columns>
        <columns>ASI_CRM_Cal_Fiscal_Year__c</columns>
        <columns>ASI_CRM_Outlet_Balance__c</columns>
        <columns>ASI_CRM_Balance_Amount__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_Trade_A_P_Plan__c.ASI_CRM_VN_Promotion_Plan,ASI_CRM_Trade_A_P_Plan__c.ASI_CRM_VN_Promotion_Plan_Read_Only</value>
        </filters>
        <label>All Promotion Plan (VN)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_VN_Trade_Marketing_Team</group>
            <group>ASI_CRM_VN_all_User</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trade A&amp;P Plan</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Trade_A_P_Plan</fullName>
        <active>true</active>
        <label>CN Trade A&amp;P Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promotion_Plan</fullName>
        <active>true</active>
        <label>ASI CRM VN Promotion Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_VN_Promotion_Plan_Read_Only</fullName>
        <active>true</active>
        <label>ASI CRM VN Promotion Plan Read Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckFiscalYear</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
	AND(
		MONTH(ASI_CRM_Start_Date__c) &lt;= 6,
		OR(
			MONTH(ASI_CRM_End_Date__c) &gt; 6,
			YEAR(ASI_CRM_Start_Date__c) &lt; YEAR(ASI_CRM_End_Date__c)
		)
	),
	AND(
		MONTH(ASI_CRM_Start_Date__c) &gt; 6,
		MONTH(ASI_CRM_End_Date__c) &gt; 6,
		YEAR(ASI_CRM_Start_Date__c) &lt; YEAR(ASI_CRM_End_Date__c)
	)
)</errorConditionFormula>
        <errorMessage>The start date and end date do not match the fiscal year.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_End_Date__c &lt; ASI_CRM_Start_Date__c</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Start_Date__c</errorDisplayField>
        <errorMessage>Start date should be smaller than end date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_VN_CheckTotalOutlet</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_CRM_Total_Outlet__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>ASI_CRM_Total_Outlet__c</errorDisplayField>
        <errorMessage>Total Outlet should be greater than 0</errorMessage>
    </validationRules>
</CustomObject>